Fix embeds: geo/type params and auto-resize

--- a/tests/manual/embed-test.html
+++ b/tests/manual/embed-test.html
@@ -515,12 +515,35 @@
         function generateEmbedCode(url, title = 'Data Blog Embed') {
             return `<iframe
   src="${url}"
+  data-data-blog-embed="true"
   width="100%"
   height="${CONFIG.IFRAME_HEIGHT}"
   style="border: 0;"
   title="${title}"
   loading="lazy"
-></iframe>`;
+></iframe>
+<script>
+(function () {
+  if (window.__DATA_BLOG_EMBED_RESIZER__) return;
+  window.__DATA_BLOG_EMBED_RESIZER__ = true;
+
+  window.addEventListener("message", function (event) {
+    var data = event.data;
+    if (!data || data.type !== "data-blog-embed:resize") return;
+    var height = Number(data.height);
+    if (!isFinite(height) || height <= 0) return;
+
+    var iframes = document.querySelectorAll('iframe[data-data-blog-embed="true"]');
+    for (var i = 0; i < iframes.length; i++) {
+      var iframe = iframes[i];
+      if (iframe.contentWindow === event.source) {
+        iframe.style.height = Math.ceil(height) + "px";
+        return;
+      }
+    }
+  });
+})();
+</script>`;
         }
 
         /**
@@ -597,6 +620,7 @@
 
             // Set the iframe src
             iframe.src = fullUrl;
+            iframe.setAttribute('data-data-blog-embed', 'true');
 
             // Populate the code block
             const codeBlock = document.getElementById(`code${index + 1}`);
