--- a/tests/manual/test.html
+++ b/tests/manual/test.html
@@ -1,13 +1,12 @@
 <iframe
-  src="https://gehuybre.github.io/data-blog/embed/vastgoed-verkopen/prijzen/?view=chart&type=alle_huizen"
+  src="https://gehuybre.github.io/data-blog/embed/energiekaart-premies/aantal-premies/?view=chart"
   data-data-blog-embed="true"
   width="100%"
-  height="500"
+  height="700"
   style="border: 0;"
-  title="Mediaanprijs"
+  title="Aantal toegekende premies"
   loading="lazy"
 ></iframe>
-
 <script>
 (function () {
   if (window.__DATA_BLOG_EMBED_RESIZER__) return;
